--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>image testing</title>
-       <link rel="stylesheet" href="image-box.css">
+       <link rel="stylesheet" href="index.css">
     </head>
     <body>
          <p class="top-side">Suggestion</p>
@@ -215,3 +215,4 @@
     </body>
 
 </html>
+
